--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,7 +4,11 @@
     justify-content: space-between;
     padding: 10px 20px;
     height: 30px;
-    border-bottom:1px solid lightgray ;
+    border-bottom:1px solid lightgray;
+    // background: white;
+    // position: sticky;
+    // top: 0;
+
     .left{  
         display: flex;
         align-items: center;
