--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -1,12 +1,81 @@
 .rightbar{
     flex:3;
-    flex:2;
+    
     position: sticky;
     top: 50px;
     height: calc(100vh - 50px);
     overflow-y: scroll;
     &::-webkit-scrollbar{
         display: none;
+    }
+    .container{
+        // display: flex;
+        padding: 20px;
+        // background:gray;
+        .item{
+            box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.09);
+            -webkit-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.09);
+            -moz-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.09);
+            padding: 20px;
+            margin-bottom: 20px;
+
+
+            span{
+                color:gray
+            }
+            .user{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin: 20px 0px;
+                position: relative;
+                .userinfo{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    img{
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                    .online{
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 50%;
+                        background-color: rgb(0, 249, 0);
+                        position: absolute;
+                        top: 0;
+                        left: 20px;
+                    }
+                    p{
+                        color: gray;
+                    }
+                    span{
+                        color: black;
+                        font-weight: 500;
+                    }
+                }
+                .buttons{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    span{
+                        font-size: 12px;
+                    }
+                    button{
+                        border: none;
+                        padding: 5px;
+                        color: white;
+                        cursor: pointer;
+                        &:first-child{
+                            background-color: blue;
+                        }
+                        &:last-child{background-color: red;}
+                    }
+                }
+            }
+        }
     }
 
 }
